<resources>
    <string name="app_name">CERTIFICACION_CLAUDIO_MUÑOZ_CONCIERTOS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="conciertos">CONCIERTOS</string>
    <string name="artista">ARTISTA</string>
    <string name="fecha">FECHA</string>
    <string name="lugar">LUGAR</string>
    <string name="ciudad">CIUDAD</string>
    <string name="comprar_entradas">COMPRAR ENTRADAS</string>
</resources>